# rgb_camera_capture_tool

./: .gitignore  README.md  capture.py  pyproject.toml  requirements.txt
cfg/: camera_parameter.toml  dualzense_out.toml
scripts/: camera_parameter.py  lens_undistortion.py  rgb_manager.py
scripts/utils/: projection_module.py  projection_utils.py  zense_camera_param.py
